# Grayscale

MPI_Parallel/: CMakeLists.txt  gray.cpp  nada3.txt  nada3_1.txt  nada4.txt  script.sh
Parallel/: clean.sh  gray.cpp
Parallel_pixel_matrix/: gray.cpp  medias.txt  nada2.txt  nada3.txt  nada4.txt  script.sh
Sequential/: CMakeLists.txt  gray.cpp
